add bower and js.

--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" ng-app="myApp">
 <head>
   <title>Eve Workshop</title>
-
 </head>
-<body>
-  <h1>Eve Workshop success.</h1>
+<body ng-controller='WelcomeCtrl'>
+
+<h1>Eve Workshop success.</h1>
+
+<p>{{testVar}}</p>
+
+<script src="/js/bundle.js"></script>
+
 </body>
 </html>
